tests/machine/x/zig/partial_application.error
Error on line 3: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/partial_application.zig:3:11: error: variable of type 'fn (i32) i32' must be const or comptime
/workspace/mochi/tests/machine/x/zig/partial_application.zig:3:11: note: use '*const fn (i32) i32' for a function pointer type

2: 
3: var add5: fn (i32) i32 = undefined;
4: 
